--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Compose_pra">
         <activity
-            android:name=".BoxActivity"
+            android:name=".ListActivity"
             android:exported="true"
-            android:label="@string/title_activity_box"
+            android:label="@string/title_activity_list"
             android:theme="@style/Theme.Compose_pra">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,11 +21,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".BoxActivity"
+            android:exported="true"
+            android:label="@string/title_activity_box"
+            android:theme="@style/Theme.Compose_pra" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Compose_pra">
-        </activity>
+            android:theme="@style/Theme.Compose_pra" />
     </application>
 
 </manifest>
